# sora-phone-bind

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  publish.yml
static/: admin.html  index.html
