[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sora-bind-platform"
version = "1.0.0"
description = "Sora 绑定平台 Web 服务"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "curl_cffi",
    "pydantic",
]

[project.scripts]
sora-bind = "main:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/phone_verify"
Repository = "https://github.com/YOUR_USERNAME/phone_verify"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["static/*", "data/*"]
